--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "http-server": "0.9.0",
+    "keythereum": "^1.0.4",
     "remixd": "git+https://github.com/ethereum/remixd.git"
   },
   "repository": {
