--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "remix-ide": "./bin/remix-ide"
   },
   "scripts": {
+    "prepare": "npm install && npm run linkremixcore && npm run linkremixlib && npm run linkremixsolidity;",
     "setupremix": "npm run pullremix && npm run linkremixcore && npm run linkremixlib && npm run linkremixsolidity;",
     "pullremix": "git clone https://github.com/ethereum/remix",
     "linkremixcore": "cd node_modules && rm -rf remix-core && ln -s ../remix/remix-core remix-core && cd ..",
