--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   "dependencies": {
     "http-server": "0.9.0",
     "keythereum": "^1.0.4",
-    "remixd": "git+https://github.com/ethereum/remixd.git"
+    "remixd": "git+https://github.com/ethereum/remixd.git",
+    "rlp": "^2.0.0"
   },
   "repository": {
     "type": "git",
